Fixed scilint quality functions. Added lint_nbs function

--- a/nbs/scilint.ipynb
+++ b/nbs/scilint.ipynb
@@ -47,8 +47,10 @@
     "from pathlib import Path\n",
     "\n",
     "import nbformat\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "from fastcore.script import call_parse\n",
-    "from nbdev.export import read_nb\n",
+    "from nbdev.export import nbglob, read_nb\n",
     "from nbqa.__main__ import _get_configs, _main\n",
     "from nbqa.cmdline import CLIArgs\n",
     "from nbqa.find_root import find_project_root\n",
@@ -112,8 +114,10 @@
     "\n",
     "@call_parse\n",
     "def sciflow_tidy():\n",
-    "    \"Run notebook formatting and tidy utilities. \\\n",
+    "    \"\"\"\n",
+    "    Run notebook formatting and tidy utilities.\n",
     "    These tools should be configured to run automatically without intervention.\"\n",
+    "    \"\"\"\n",
     "    tidy_tools = [\"black\", \"isort\", \"autoflake\"]\n",
     "    [run_nbqa_cmd(c) for c in tidy_tools]"
    ]
@@ -130,9 +134,9 @@
     "\n",
     "## Metrics\n",
     "1. Tests per Function: $\\mathrm{TpF}$ = $\\dfrac{|\\tau|}{f}$,when $f=0; \\mathrm{TpF} = 0$\n",
-    "2. In-function Percentage: $\\mathrm{IP} = $\\# $\\mathrm{statements-in-function}:$ \\# $\\mathrm{all-statements}$ \n",
-    "3. MD to Code Ratio: $\\mathrm{CMR}$ = # $ \\mathrm{markdown-cells}:$ \\# $\\mathrm{code-cells}$ \n",
-    "4. Total Code Lines: $\\mathrm{TCL}$ = \\# $\\mathrm{all-code-lines}$ "
+    "2. In-function Percentage: $\\mathrm{IP} = $$\\mathrm{statementsInFunction}:$$\\mathrm{allStatements}$ \n",
+    "3. MD to Code Ratio: $\\mathrm{CMR}$ = $ \\mathrm{markdownCells}:$$\\mathrm{codeCells}$ \n",
+    "4. Total Code Lines: $\\mathrm{TCL}$ = $\\mathrm{allCodeLines}$ "
    ]
   },
   {
@@ -249,11 +253,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "test_module_path = Path(Path(\".\").resolve(), \"test\", \"test_module.ipynb\")\n",
+    "test_data_handling_path = Path(Path(\".\").resolve(), \"test\", \"test_data_handling.ipynb\")\n",
+    "test_export_path = Path(Path(\".\").resolve(), \"test\", \"test_export.ipynb\")\n",
+    "test_multistep_path = Path(Path(\".\").resolve(), \"test\", \"test_multistep.ipynb\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_module_nb = read_nb(test_module_path)\n",
+    "test_data_handling_nb = read_nb(test_data_handling_path)\n",
+    "test_export_nb = read_nb(test_export_path)\n",
+    "test_multistep_nb = read_nb(test_multistep_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# export\n",
     "\n",
     "\n",
-    "def tpf(nb_path):\n",
-    "    nb, module_code = load_nb_module(nb_path)\n",
+    "def tpf(nb, module_code):\n",
     "    pnb = nbformat.from_dict(nb)\n",
     "    nb_cell_code = \"\\n\".join(\n",
     "        [c[\"source\"].replace(\"%\", \"#\") for c in pnb.cells if c[\"cell_type\"] == \"code\"]\n",
@@ -262,7 +289,6 @@
     "    func_calls = count_func_calls(nb_cell_code, func_defs)\n",
     "    num_funcs = len(func_calls.keys())\n",
     "    num_tests = sum(func_calls.values())\n",
-    "    print(num_tests, num_funcs)\n",
     "    return calc_tpf(num_tests, num_funcs)"
    ]
   },
@@ -272,25 +298,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tpf(\"test/test_module.ipynb\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tpf(\"test/test_data_handling.ipynb\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tpf(\"test/test_export.ipynb\")"
+    "assert tpf(*load_nb_module(test_module_path)) == 0\n",
+    "assert tpf(*load_nb_module(test_data_handling_path)) >= 0\n",
+    "assert tpf(*load_nb_module(test_export_path)) >= 0\n",
+    "assert tpf(*load_nb_module(test_multistep_path)) >= 0"
    ]
   },
   {
@@ -306,19 +317,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb_cell_code = \"\"\"\n",
+    "nb_cell_code = r\"\"\"\n",
     "def something():\n",
-    "    pass; pass\n",
+    "    pass; pass # in x 2\n",
+    "    \n",
     "#load_ext autoreload\n",
     "#autoreload 2\n",
     "# export\n",
     "\n",
+    "import pandas as pd # out\n",
+    "from sciflow.utils import lib_path, odbc_connect, query # out\n",
     "\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from sciflow.utils import lib_path, odbc_connect, query\n",
-    "pd.set_option(\"display.max_colwidth\", 800)\n",
     "# export\n",
+    "\n",
+    "def nb_to_sagemaker_pipeline(\n",
+    "    nb_path: Path,\n",
+    "    silent: bool = True,\n",
+    "):\n",
+    "    nb = read_nb(nb_path)  # in\n",
+    "    lib_name = get_config().get(\"lib_name\")  # in\n",
+    "    module_name = find_default_export(nb[\"cells\"])  # in\n",
+    "    \n",
+    "x = [1,2,3] # out\n",
+    "nb_to_sagemaker_pipeline() # out\n",
     "\"\"\""
    ]
   },
@@ -328,26 +349,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
-    "\n",
-    "\n",
-    "def ifp(nb_path):\n",
-    "    nb = read_nb(nb_path)\n",
-    "    nb_cell_code = \"\\n\".join(\n",
-    "        [c[\"source\"].replace(\"%\", \"#\") for c in nb.cells if c[\"cell_type\"] == \"code\"]\n",
-    "    )\n",
+    "# import astunparse\n",
+    "# print(astunparse.dump(ast.parse(nb_cell_code)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_ifp(nb_cell_code):\n",
     "    stmts_in_func = 0\n",
     "    stmts_outside_func = 0\n",
     "    for stmt in ast.walk(ast.parse(nb_cell_code)):\n",
     "        if isinstance(stmt, ast.FunctionDef) and not stmt.name.startswith(\"_\"):\n",
     "            for body_item in stmt.body:\n",
     "                stmts_in_func += 1\n",
-    "        else:\n",
-    "            stmts_outside_func += 1\n",
+    "        elif isinstance(stmt, ast.Module):\n",
+    "            for body_item in stmt.body:\n",
+    "                if not isinstance(body_item, ast.FunctionDef):\n",
+    "                    stmts_outside_func += 1\n",
     "    return (\n",
     "        0\n",
     "        if stmts_outside_func + stmts_in_func == 0\n",
-    "        else stmts_in_func / (stmts_outside_func + stmts_in_func)\n",
+    "        else (stmts_in_func / (stmts_outside_func + stmts_in_func)) * 100\n",
     "    )"
    ]
   },
@@ -357,32 +383,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ifp(\"test/test_data_handling.ipynb\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ifp(\"test/test_export.ipynb\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ifp(\"test/test_multistep.ipynb\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 3. Markdown to Code Ratio"
+    "assert (calc_ifp(nb_cell_code)) == (5 / (4 + 5)) * 100"
    ]
   },
   {
@@ -394,13 +395,51 @@
     "# export\n",
     "\n",
     "\n",
-    "def mcr(nb_path):\n",
-    "    nb = read_nb(nb_path)\n",
+    "def ifp(nb):\n",
+    "    nb_cell_code = \"\\n\".join(\n",
+    "        [c[\"source\"].replace(\"%\", \"#\") for c in nb.cells if c[\"cell_type\"] == \"code\"]\n",
+    "    )\n",
+    "    return calc_ifp(nb_cell_code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert ifp(test_module_nb) >= 0\n",
+    "assert ifp(test_data_handling_nb) >= 0\n",
+    "assert ifp(test_export_nb) >= 0\n",
+    "assert ifp(test_multistep_nb) >= 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Markdown to Code Percent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def mcp(nb):\n",
     "    md_cells = [c for c in nb.cells if c[\"cell_type\"] == \"markdown\"]\n",
     "    code_cells = [c for c in nb.cells if c[\"cell_type\"] == \"code\"]\n",
     "    num_code_cells = len(code_cells)\n",
     "    num_md_cells = len(md_cells)\n",
-    "    return 0 if num_code_cells == 0 else num_md_cells / num_code_cells"
+    "    return (\n",
+    "        0\n",
+    "        if num_code_cells == 0\n",
+    "        else (num_md_cells / (num_md_cells + num_code_cells)) * 100\n",
+    "    )"
    ]
   },
   {
@@ -409,25 +448,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mcr(\"test/test_module.ipynb\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mcr(\"test/test_export.ipynb\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mcr(\"test/test_data_handling.ipynb\")"
+    "assert mcp(test_module_nb) >= 0\n",
+    "assert mcp(test_data_handling_nb) >= 0\n",
+    "assert mcp(test_export_nb) >= 0\n",
+    "assert mcp(test_multistep_nb) >= 0"
    ]
   },
   {
@@ -446,8 +470,7 @@
     "# export\n",
     "\n",
     "\n",
-    "def tcl(nb_path):\n",
-    "    nb = read_nb(nb_path)\n",
+    "def tcl(nb):\n",
     "    return sum([len(c[\"source\"]) for c in nb.cells if c[\"cell_type\"] == \"code\"])"
    ]
   },
@@ -457,7 +480,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tcl(\"test/test_module.ipynb\")"
+    "assert tcl(test_module_nb) >= 50\n",
+    "assert tcl(test_data_handling_nb) >= 50\n",
+    "assert tcl(test_export_nb) >= 50\n",
+    "assert tcl(test_multistep_nb) >= 50"
    ]
   },
   {
@@ -466,7 +492,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tcl(\"test/test_multistep.ipynb\")"
+    "# export\n",
+    "\n",
+    "\n",
+    "def lint_nb(\n",
+    "    nb_path,\n",
+    "    tpf_warn_thresh=None,\n",
+    "    ifp_warn_thresh=None,\n",
+    "    mcp_warn_thresh=None,\n",
+    "    tcl_warn_thresh=None,\n",
+    "    rounding_precision=3,\n",
+    "):\n",
+    "    result = (np.nan, np.nan, np.nan, np.nan)\n",
+    "    try:\n",
+    "        nb, module_code = load_nb_module(nb_path)\n",
+    "    except ValueError:\n",
+    "        # print(f\"Skipping notebook with no associated module: {nb_path.name}\")\n",
+    "        return result\n",
+    "    nb_tpf = round(tpf(nb, module_code), rounding_precision)\n",
+    "    nb_ifp = round(ifp(nb), rounding_precision)\n",
+    "    nb_mcp = round(mcp(nb), rounding_precision)\n",
+    "    nb_tcl = round(tcl(nb), rounding_precision)\n",
+    "    # print(f\"NB: {nb_path.name} TestsPerFunction: {nb_tpf} In-FunctionPercent: {nb_ifp} MarkdownToCodeRatio: {nb_mcr} TotalCodeLen: {nb_tcl}\")\n",
+    "    return (nb_tpf, nb_ifp, nb_mcp, nb_tcl)"
    ]
   },
   {
@@ -475,7 +523,106 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tcl(\"test/test_data_handling.ipynb\")"
+    "# export\n",
+    "\n",
+    "\n",
+    "def format_quality_warning(metric, warning_data, warn_thresh, direction):\n",
+    "    for warning_row in warning_data.reset_index().itertuples():\n",
+    "        print(f'\"{warning_row.index}\" has: {metric} {direction} {warn_thresh}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def lint_nbs(\n",
+    "    tpf_warn_thresh=1,\n",
+    "    ifp_warn_thresh=10,\n",
+    "    mcp_warn_thresh=5,\n",
+    "    tcl_warn_thresh=20000,\n",
+    "    rounding_precision=3,\n",
+    "):\n",
+    "    nb_paths = nbglob(recursive=True)\n",
+    "    lt_metric_cols = [\n",
+    "        \"tests_per_function\",\n",
+    "        \"in_function_percent\",\n",
+    "        \"markdown_code_percent\",\n",
+    "    ]\n",
+    "    gt_metric_cols = [\"total_code_len\"]\n",
+    "    lt_metrics_thresholds = [tpf_warn_thresh, ifp_warn_thresh, mcp_warn_thresh]\n",
+    "    gt_metrics_thresholds = [tcl_warn_thresh]\n",
+    "    results = []\n",
+    "    nb_names = []\n",
+    "    for nb_path in nb_paths:\n",
+    "        nb_names.append(nb_path.stem)\n",
+    "        results.append(lint_nb(nb_path))\n",
+    "    lint_report = pd.DataFrame.from_records(\n",
+    "        data=results, index=nb_names, columns=lt_metric_cols + gt_metric_cols\n",
+    "    ).sort_values([\"tests_per_function\", \"markdown_code_percent\"], ascending=False)\n",
+    "\n",
+    "    print(\n",
+    "        \"\\n********************************Begin Scilint Report********************************\"\n",
+    "    )\n",
+    "    for lt_metric_col, lt_metrics_threshold in zip(\n",
+    "        lt_metric_cols, lt_metrics_thresholds\n",
+    "    ):\n",
+    "        metrics_series = lint_report[lt_metric_col]\n",
+    "        format_quality_warning(\n",
+    "            lt_metric_col,\n",
+    "            metrics_series[metrics_series < lt_metrics_threshold],\n",
+    "            lt_metrics_threshold,\n",
+    "            direction=\"<\",\n",
+    "        )\n",
+    "    for gt_metric_col, gt_metrics_threshold in zip(\n",
+    "        gt_metric_cols, gt_metrics_thresholds\n",
+    "    ):\n",
+    "        metrics_series = lint_report[gt_metric_col]\n",
+    "        format_quality_warning(\n",
+    "            gt_metric_col,\n",
+    "            metrics_series[metrics_series > gt_metrics_threshold],\n",
+    "            gt_metrics_threshold,\n",
+    "            direction=\">\",\n",
+    "        )\n",
+    "    print(\n",
+    "        \"\\n********************************End Scilint Report********************************\"\n",
+    "    )\n",
+    "\n",
+    "    return lint_report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lint_report = lint_nbs()\n",
+    "lint_report.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert type(lint_report) == pd.DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@call_parse\n",
+    "def sciflow_lint():\n",
+    "    lint_nbs()"
    ]
   }
  ],
