--- a/nbs/utils.ipynb
+++ b/nbs/utils.ipynb
@@ -187,7 +187,11 @@
     "\n",
     "def load_nb(nb_path):\n",
     "    nb = read_nb(nb_path)\n",
-    "    module_name = find_default_export(nb[\"cells\"]).replace(\".\", \"/\")\n",
+    "    default_export = find_default_export(nb[\"cells\"])\n",
+    "    if default_export is None:\n",
+    "        raise ValueError(f\"{nb_path.name} does not contain an associated nbdev module\")\n",
+    "\n",
+    "    module_name = default_export.replace(\".\", \"/\")\n",
     "    module_path = os.path.join(get_config().path(\"lib_path\"), f\"{module_name}.py\")\n",
     "    return nb, module_path"
    ]
@@ -198,7 +202,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb, module_path = load_nb(\"test/test_multistep.ipynb\")"
+    "nb, module_path = load_nb(\"test/test_multistep.ipynb\")\n",
+    "assert type(nb) == nbformat.notebooknode.NotebookNode\n",
+    "assert os.path.exists(module_path)"
    ]
   },
   {
@@ -207,8 +213,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert type(nb) == nbformat.notebooknode.NotebookNode\n",
-    "assert os.path.exists(module_path)"
+    "check = False\n",
+    "try:\n",
+    "    nb, module_path = load_nb(Path(Path(\".\").resolve(), \"index.ipynb\"))\n",
+    "except ValueError:\n",
+    "    check = True\n",
+    "assert check"
    ]
   },
   {
@@ -234,7 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb, module_code = load_nb_module(\"test/test_multistep.ipynb\")"
+    "nb, module_code = load_nb_module(Path(\"test/test_multistep.ipynb\"))"
    ]
   },
   {
