Fixed scilint script exports

--- a/nbs/scilint.ipynb
+++ b/nbs/scilint.ipynb
@@ -349,16 +349,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import astunparse\n",
-    "# print(astunparse.dump(ast.parse(nb_cell_code)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# export\n",
+    "\n",
+    "\n",
     "def calc_ifp(nb_cell_code):\n",
     "    stmts_in_func = 0\n",
     "    stmts_outside_func = 0\n",
@@ -565,9 +558,9 @@
     "        data=results, index=nb_names, columns=lt_metric_cols + gt_metric_cols\n",
     "    ).sort_values([\"tests_per_function\", \"markdown_code_percent\"], ascending=False)\n",
     "\n",
-    "    print(\n",
-    "        \"\\n********************************Begin Scilint Report********************************\"\n",
-    "    )\n",
+    "    # TODO persist to remote storage\n",
+    "\n",
+    "    print(\"\\n*********************Begin Scilint Report*********************\")\n",
     "    for lt_metric_col, lt_metrics_threshold in zip(\n",
     "        lt_metric_cols, lt_metrics_thresholds\n",
     "    ):\n",
@@ -588,38 +581,27 @@
     "            gt_metrics_threshold,\n",
     "            direction=\">\",\n",
     "        )\n",
-    "    print(\n",
-    "        \"\\n********************************End Scilint Report********************************\"\n",
-    "    )\n",
+    "    print(\"*********************End Scilint Report***********************\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lint_nbs()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
     "\n",
-    "    return lint_report"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lint_report = lint_nbs()\n",
-    "lint_report.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert type(lint_report) == pd.DataFrame"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "@call_parse\n",
     "def sciflow_lint():\n",
     "    lint_nbs()"
@@ -627,10 +609,23 @@
   }
  ],
  "metadata": {
+  "instance_type": "ml.m5.xlarge",
   "kernelspec": {
    "display_name": "sciflow (sciflow/3)",
    "language": "python",
    "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:368653567616:image-version/sciflow/3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
