Added right S3 key structure to tracking

--- a/nbs/s3_utils.ipynb
+++ b/nbs/s3_utils.ipynb
@@ -287,6 +287,33 @@
     "# export\n",
     "\n",
     "\n",
+    "def list_bucket(bucket_name, prefix, s3_res=None):\n",
+    "    s3_res = s3_res if s3_res is not None else boto3.resource(\"s3\")\n",
+    "    bucket = s3_res.Bucket(bucket_name)\n",
+    "    all_keys = [obj.key for obj in bucket.objects.filter(Prefix=prefix)]\n",
+    "    return all_keys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "listed_keys = list_bucket(bucket_name, test_root, s3_res)\n",
+    "assert len(listed_keys) == 1\n",
+    "assert listed_keys[0].split(\"/\")[-1] == \"index.json\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
     "def upload_directory(s3_client, path, bucket_name, prefix):\n",
     "    for root, dirs, files in os.walk(path):\n",
     "        # Ignore non-python source files and IPython checkpoint files\n",
