--- a/nbs/tracking.ipynb
+++ b/nbs/tracking.ipynb
@@ -43,6 +43,7 @@
     "\n",
     "import datetime\n",
     "import json\n",
+    "import uuid\n",
     "\n",
     "import boto3\n",
     "from sacred.serializer import flatten\n",
@@ -50,7 +51,10 @@
     "from sacred.utils import IntervalTimer\n",
     "\n",
     "from sciflow.s3_utils import (\n",
+    "    delete_dir,\n",
+    "    list_bucket,\n",
     "    list_s3_subdirs,\n",
+    "    objects_exist_in_dir,\n",
     "    s3_join,\n",
     ")"
    ]
@@ -75,16 +79,16 @@
     "    def __init__(\n",
     "        self,\n",
     "        bucket_name,\n",
-    "        flow_base_uri,\n",
+    "        flow_base_key,\n",
     "        flow_run_id,\n",
     "        step_name,\n",
     "        capture_mode=\"sys\",\n",
     "        region=\"eu-west-1\",\n",
     "    ):\n",
     "        self.bucket_name = bucket_name\n",
-    "        self.flow_base_uri = flow_base_uri\n",
+    "        self.flow_base_key = flow_base_key\n",
     "        self.flow_run_id = flow_run_id\n",
-    "        self.exp_base_key = s3_join(self.flow_base_uri, \"experiment\")\n",
+    "        self.exp_base_key = s3_join(flow_base_key, flow_run_id, \"experiment\")\n",
     "        self.step_name = step_name\n",
     "        self.capture_mode = capture_mode\n",
     "        self._stop_heartbeat_event = None\n",
@@ -107,7 +111,7 @@
     "                    \"region name specified in your AWS config file\"\n",
     "                )\n",
     "\n",
-    "        self.init_dirs()\n",
+    "        self.init_keys()\n",
     "\n",
     "    def start_heartbeat(self):\n",
     "        print(\"Starting Heartbeat\")\n",
@@ -152,15 +156,13 @@
     "            self.saved_metrics[metric_name][\"steps\"] += metric_ptr[\"steps\"]\n",
     "            timestamps_norm = [ts.isoformat() for ts in metric_ptr[\"timestamps\"]]\n",
     "            self.saved_metrics[metric_name][\"timestamps\"] += timestamps_norm\n",
-    "        print(self.saved_metrics)\n",
-    "        print(self.metrics_dir)\n",
-    "        self.save_json(self.metrics_dir, self.saved_metrics, \"metrics.json\")\n",
+    "        self.save_json(self.metrics_key, self.saved_metrics, \"metrics.json\")\n",
     "\n",
     "    def add_artifacts(self, artifacts):\n",
     "        for name, filepath in artifacts:\n",
-    "            self.save_file(self.artifacts_dir, filepath, name)\n",
+    "            self.save_file(self.artifacts_key, filepath, name)\n",
     "            self.run_entry[\"artifacts\"].append(name)\n",
-    "        self.save_json(self.runs_dir, self.run_entry, \"run.json\")\n",
+    "        self.save_json(self.runs_key, self.run_entry, \"run.json\")\n",
     "\n",
     "    def _emit_heartbeat(self):\n",
     "        self.get_captured_out()\n",
@@ -172,14 +174,13 @@
     "        self.run_entry[\"heartbeat\"] = beat_time.isoformat()\n",
     "        self.run_entry[\"captured_out\"] = self.get_captured_out()\n",
     "        self.run_entry[\"result\"] = self.result\n",
-    "        self.save_json(self.runs_dir, self.run_entry, \"run.json\")\n",
+    "        self.save_json(self.runs_key, self.run_entry, \"run.json\")\n",
     "\n",
     "    def put_data(self, key, binary_data):\n",
     "        self.s3.Object(self.bucket_name, key).put(Body=binary_data)\n",
     "\n",
     "    def save_json(self, table_dir, obj, filename):\n",
     "        key = s3_join(table_dir, filename)\n",
-    "        print(\"save_json\", key)\n",
     "        self.put_data(key, json.dumps(flatten(obj), sort_keys=True, indent=2))\n",
     "\n",
     "    def save_file(self, file_save_dir, filename, target_name=None):\n",
@@ -192,7 +193,7 @@
     "        source_info = []\n",
     "        for s, m in ex_info[\"sources\"]:\n",
     "            abspath = os.path.join(base_dir, s)\n",
-    "            store_path, md5sum = self.find_or_save(abspath, self.source_dir)\n",
+    "            store_path, md5sum = self.find_or_save(abspath, self.source_key)\n",
     "            source_info.append(\n",
     "                [s, os.path.relpath(store_path, self.experiments_key_prefix)]\n",
     "            )\n",
@@ -204,32 +205,28 @@
     "        store_name = source_name + \"_\" + md5sum + ext\n",
     "        store_path = s3_join(store_dir, store_name)\n",
     "        if len(list_s3_subdirs(self.s3, self.bucket_name, prefix=store_path)) == 0:\n",
-    "            self.save_file(self.source_dir, filename, store_path)\n",
+    "            self.save_file(self.source_key, filename, store_path)\n",
     "        return store_path, md5sum\n",
     "\n",
-    "    def init_dirs(self):\n",
-    "        self.runs_dir = s3_join(self.exp_base_key, \"runs\")\n",
-    "        self.metrics_dir = s3_join(self.exp_base_key, \"metrics\")\n",
-    "        self.artifacts_dir = s3_join(self.exp_base_key, \"artifacts\")\n",
-    "        self.resource_dir = s3_join(self.exp_base_key, \"resources\")\n",
-    "        self.source_dir = s3_join(self.exp_base_key, \"sources\")\n",
+    "    def init_keys(self):\n",
+    "        self.runs_key = s3_join(self.exp_base_key, \"runs\")\n",
+    "        self.metrics_key = s3_join(self.exp_base_key, \"metrics\")\n",
+    "        self.artifacts_key = s3_join(self.exp_base_key, \"artifacts\")\n",
+    "        self.resource_key = s3_join(self.exp_base_key, \"resources\")\n",
+    "        self.source_key = s3_join(self.exp_base_key, \"sources\")\n",
     "\n",
-    "        self.dirs = (\n",
-    "            self.runs_dir,\n",
-    "            self.metrics_dir,\n",
-    "            self.artifacts_dir,\n",
-    "            self.resource_dir,\n",
-    "            self.source_dir,\n",
+    "        self.keys = (\n",
+    "            self.runs_key,\n",
+    "            self.metrics_key,\n",
+    "            self.artifacts_key,\n",
+    "            self.resource_key,\n",
+    "            self.source_key,\n",
     "        )\n",
-    "\n",
-    "\n",
-    "#         for dir_to_check in self.dirs:\n",
-    "#             if objects_exist_in_dir(self.s3, self.bucket_name, dir_to_check):\n",
-    "#                 raise FileExistsError(\n",
-    "#                     \"S3 dir at {}/{} already exists; check your run_id is unique\".format(\n",
-    "#                         self.bucket_name, dir_to_check\n",
-    "#                     )\n",
-    "#                 )"
+    "        for key_to_check in self.keys:\n",
+    "            if objects_exist_in_dir(self.s3, self.bucket_name, key_to_check):\n",
+    "                raise FileExistsError(\n",
+    "                    f\"S3 dir at {self.bucket_name}/{key_to_check} already exists; check your run_id is unique\"\n",
+    "                )"
    ]
   },
   {
@@ -239,10 +236,35 @@
    "outputs": [],
    "source": [
     "bucket_name = \"pprsandboxpdlras3\"\n",
-    "flow_base_key = \"test-module/pipeline-2022-05-05-10-56-30-182/\"\n",
-    "tracker = StepTracker(\n",
-    "    bucket_name, flow_base_key, \"pipeline-2022-05-05-10-56-30-182\", \"experiment-test\"\n",
-    ")"
+    "flow_base_key = \"flow-\" + str(uuid.uuid4())\n",
+    "flow_run_id = \"sample_flow_instance_123\"\n",
+    "flow_run_key = s3_join(flow_base_key, flow_run_id)\n",
+    "s3_res = boto3.resource(\"s3\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flow_base_key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tracker = StepTracker(bucket_name, flow_base_key, flow_run_id, \"experiment-test\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Metrics"
    ]
   },
   {
@@ -253,15 +275,7 @@
    "source": [
     "metrics_by_name = {\n",
     "    \"auc\": {\"values\": [0.9], \"steps\": [1], \"timestamps\": [datetime.datetime.utcnow()]}\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "}\n",
     "metrics_by_name"
    ]
   },
@@ -280,23 +294,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s3_res = boto3.resource(\"s3\")\n",
-    "bucket = s3_res.Bucket(bucket_name)\n",
-    "all_keys = [\n",
-    "    obj.key\n",
-    "    for obj in bucket.objects.filter(\n",
-    "        Prefix=\"test-module/pipeline-2022-05-05-10-56-30-182/\"\n",
-    "    )\n",
-    "]"
+    "list_bucket(bucket_name, flow_run_key)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "all_keys"
+    "# Out Capture"
    ]
   },
   {
@@ -311,6 +316,122 @@
     "    print(\"Some text\")\n",
     "    tracker.get_captured_out()\n",
     "assert tracker.captured_out == \"Some text\\nSome text\\n\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Artifacts\n",
+    "\n",
+    "> Support is provided for the same artifact types as found in `sacred`; however we will not be testing the creation, saving or loading of mp4s here as this would require external dependencies for video creation such as ffmpeg. \n",
+    "\n",
+    "Supported artifact types:\n",
+    "\n",
+    "* `.txt`: `text/csv`,\n",
+    "* `.csv`: `text/csv`,\n",
+    "* `.png`: `image/png`,\n",
+    "* `.jpg`: `image/jpeg`,\n",
+    "* `.mp4`: `video/mp4`,\n",
+    "* `.pickle`: `application/octet-stream`,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame({\"a\": [1, 2, 3], \"b\": [\"a\", \"b\", \"c\"]})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.a.plot.hist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df = pd.DataFrame({'a': [1,2,3], 'b': ['a', 'b', 'c']})\n",
+    "\n",
+    "# with tempfile.TemporaryDirectory() as temp_dir:\n",
+    "#     csv_path = f\"{temp_dir}/testfile.csv\"\n",
+    "#     df.to_csv(csv_path)\n",
+    "#     txt_path = f\"{temp_dir}/testfile.txt\"\n",
+    "#     df.to_csv(txt_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sources"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Resources"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Host info"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tear-down - delete created remote objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "delete_dir(s3_res, bucket_name, flow_base_key)"
    ]
   },
   {
